// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`depositReceivedV120 should update the values for an existing ccm gas swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "110000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:39.000Z,
  "depositReceivedBlockIndex": "0-15",
  "destAddress": "0x6fd76a7699e6269af49e9c63f01f61464ab21d1c",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [
    {
      "amount": "1000",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "swapInputAmount": "100000",
  "swapOutputAmount": null,
  "txHash": null,
  "type": "PRINCIPAL",
  "updatedAt": Any<Date>,
}
`;

exports[`depositReceivedV120 should update the values for an existing ccm principal swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "110000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:39.000Z,
  "depositReceivedBlockIndex": "0-15",
  "destAddress": "0x6fd76a7699e6269af49e9c63f01f61464ab21d1c",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [
    {
      "amount": "1000",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "swapInputAmount": "100000",
  "swapOutputAmount": null,
  "txHash": null,
  "type": "PRINCIPAL",
  "updatedAt": Any<Date>,
}
`;

exports[`depositReceivedV120 should update the values for an existing swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "110000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:39.000Z,
  "depositReceivedBlockIndex": "0-15",
  "destAddress": "0x6fd76a7699e6269af49e9c63f01f61464ab21d1c",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [
    {
      "amount": "1000",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "swapInputAmount": "100000",
  "swapOutputAmount": null,
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
